# permutations-playground

./: Makefile  README.md  elm.js  group-theory.dot  hie.yaml  permutation-playground.cabal  random-perm-playground.cabal  stack.yaml
client/: Makefile  elm.json  index.html
client/review/: elm.json
client/src/: Main.elm  Permutation.elm
src/: Main.hs
