name:                permutation-playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/permutation-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Jan Hrček
maintainer:          example@example.com
copyright:           2020 Jan Hrček
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable permutation-playground
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded 
  build-depends:       base >= 4.7 && < 5
                     , array
                     , bytestring
                     , combinat
                     , servant
                     , servant-server
                     , random
                     , wai
                     , warp
                     , http-media
                     , turtle
