cabal-version:      >=1.10
name:               permutation-playground
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
copyright:          2020 Jan Hrček
maintainer:         example@example.com
author:             Jan Hrček
homepage:           https://github.com/githubuser/permutation-playground#readme
category:           Web
build-type:         Simple
extra-source-files: README.md

executable permutation-playground
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded
    build-depends:
        base >=4.7 && <5,
        array,
        bytestring,
        combinat,
        servant,
        servant-server,
        random,
        wai,
        warp,
        http-media,
        turtle
