cabal-version:      3.0
name:               permutation-playground
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Jan Hrček
maintainer:         honza.hrk@gmail.com
author:             Jan Hrček
homepage:           https://github.com/githubuser/permutation-playground#readme
synopsis:
  A simple web app to generate permutation images using graphviz

category:           Web
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: git@github.com/jhrcek/permutations-playground.git

executable permutation-playground
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -O2 -threaded -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wcompat -Widentities
    -Wredundant-constraints -Wpartial-fields -Wno-unrecognised-pragmas

  build-depends:
    , array
    , base            >=4.7 && <5
    , bytestring
    , combinat
    , containers
    , http-media
    , random
    , servant
    , servant-server
    , turtle
    , wai
    , warp
